--- a/app/views/page2/index.html.erb
+++ b/app/views/page2/index.html.erb
@@ -1,2 +1,2 @@
 <b>Page 2</b>
-<p><%= link_to "Go to Page3", page3_index_path %></p>
+<p><%= link_to "Go to Page3", page3_index_path(token: session[:jwt_token]) %></p>
